Fix display of social links - they should be hidden on mobile in question detail screen for the primary question

--- a/opendebates/static/less/base.less
+++ b/opendebates/static/less/base.less
@@ -738,6 +738,7 @@ hr.before-idea-list {
     .social-links {
       & > span {
         text-align: center;
+        flex-grow: 1;
         a {
           margin: 0 auto;
         }
@@ -1217,7 +1218,7 @@ hr.before-idea-list {
     flex-grow: 1;
 
     .social-links {
-      display: none;
+      display: none !important;
       .sms-button {
         display: none;
       }
@@ -1306,7 +1307,7 @@ hr.before-idea-list {
 
 .question-detail .idea-related .big-idea {
   .social-links {
-    display: inline-block;
+    display: flex !important;
   }
 }
 
